# afl-tui

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
examples/: dump_logos.rs
src/: app.rs  lib.rs  main.rs  poller.rs  teams.rs
src/api/: client.rs  mod.rs  models.rs
src/ui/: feed.rs  fixture.rs  logo.rs  match_view.rs  mod.rs
tests/: deserialize.rs  feed_update.rs
tests/fixtures/: compseasons.json  match_item.json  matches_round.json  player_stats.json
